# Place2Place

./: .gitignore  README.md  key-manager.js  mesh-simulation.test.js  package-lock.json  package.json  telemetry-encoder.js  test.js  traffic-base.js
.cursor/rules/: principal-rule.mdc
backend/.data/: CORESTORE
backend/.data/db/: 000008.sst  000009.blob  000014.sst  000015.blob  IDENTITY  LOG  LOG.old.1777124754765786  LOG.old.1777125152396425  MANIFEST-000017  SESSION_ID
backend/.data/examples/car-a/: CORESTORE
backend/.data/examples/car-a-handoff/: CORESTORE
backend/.data/examples/car-a-handoff/db/: IDENTITY  LOG  MANIFEST-000005  SESSION_ID
backend/.data/examples/car-b/: CORESTORE
backend/.data/examples/car-b-topic1/: CORESTORE
backend/.data/examples/car-c-topic2/: CORESTORE
backend/.data/examples/car-london/: CORESTORE
backend/.data/examples/car-nyc/: CORESTORE
backend/native/valhalla-addon/: CMakeLists.txt  README.md  binding.cc  binding.js  gps-to-edge.js  package-lock.json  package.json  test.js  traffic-bridge.js  valhalla.json
backend/scripts/: setup-valhalla-data.sh
backend/src/: config.js  index.js  peer-node.js  routing-bridge.js  telemetry-encoder.js
backend/src/sim/: path.js
backend/src/storage/: corestore.js
backend/src/swarm/: mesh.js  topic.js
dijkstra/: README.md  create_graph.js  p2p.integration.test.js  package-lock.json  package.json  routing.js  routing.test.js  schema.js  server.js  simulation.js
docs/: FILE_DOCUMENTATION.md
examples/mock-directions/: README.md  run-scenario.js
examples/mock-directions/scenarios/: boundary-handoff.json  churn-flapping.json  different-zones.json  message-ferry-chain.json  same-cell.json
public/: app.js  app_p2p.js  app_p2p_backup.js  index.html
(+80 files in other folders)
